---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2020-05-26
  Changes:
    - Minor style updates and code cleanup.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020-04-20
  Changes:
    - Use new script inventories feature to import default template instead of the cursor stack, to avoid potential conflicts with scenarios.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020-01-24
  Features:
    - Updated to Factorio 0.18
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2019-12-31
  Features:
    - Initial release