@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when trying to refresh the GUI for a non-existent player
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 2020-05-26
